# drafft-ink

./: Cargo.toml  README.md  build-history.sh  context.q
.github/workflows/: ci.yml
crates/drafftink/: Cargo.toml  README.md
crates/drafftink-app/: Cargo.toml
crates/drafftink-app/assets/: intro.json
crates/drafftink-app/benches/: render_bench.rs
crates/drafftink-app/src/: app.rs  event_handler.rs  lib.rs  shortcuts.rs  ui.rs  web.rs
crates/drafftink-core/: Cargo.toml
crates/drafftink-core/src/: camera.rs  canvas.rs  collaboration.rs  elbow.rs  input.rs  lib.rs  selection.rs  snap.rs  sync.rs
crates/drafftink-core/src/crdt/: convert.rs  mod.rs  schema.rs
crates/drafftink-core/src/shapes/: arrow.rs  ellipse.rs  freehand.rs  group.rs  image.rs  line.rs  math.rs  mod.rs  rectangle.rs  text.rs
crates/drafftink-core/src/storage/: autosave.rs  file.rs  indexeddb.rs  memory.rs  mod.rs
crates/drafftink-core/src/tools/: mod.rs
crates/drafftink-core/src/widget/: manager.rs  mod.rs  state.rs
crates/drafftink-render/: Cargo.toml
crates/drafftink-render/src/: lib.rs  renderer.rs  rex_backend.rs  text_editor.rs  vello_impl.rs
crates/drafftink-server/src/: main.rs
crates/drafftink-widgets/: Cargo.toml
crates/drafftink-widgets/src/: buttons.rs  colors.rs  common.rs  layout.rs  lib.rs  menu.rs
crates/drafftink/src/: lib.rs
